--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head> 
     <!--Website's/Project Name-->  
 <title>CNS and Epilepsy</title>
+    <!-- Hotjar Tracking Code for https://rsukr.github.io/epilepsy/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3834685,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head> 
 <body>
     <!--Title of CNS and introduction-->
