--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng-CA">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N94Y8JPQMH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-N94Y8JPQMH');
-</script>
+    <meta name="google-site-verification" content="XZxVESkNTKqSmBWiKaVbLIRH8O4Q2lmve4DJg2Iv5_I" />
     <!--Website's/Project Name-->  
 <title>CNS and Epilepsy</title>
 </head> 
