--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="eng-CA">
 <head>
     <meta name="google-site-verification" content="XZxVESkNTKqSmBWiKaVbLIRH8O4Q2lmve4DJg2Iv5_I" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JMYP7VJB11"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JMYP7VJB11');
+</script>
     <!--Website's/Project Name-->  
 <title>CNS and Epilepsy</title>
 </head> 
