--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
   gtag('config', 'G-JMYP7VJB11');
 </script>
+    <!-- Hotjar Tracking Code for Epilepsy -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3835738,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
     <!--Website's/Project Name-->  
 <title>CNS and Epilepsy</title>
 </head> 
