--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         The other part is the peripheral nervous system, which consists of nerves that connect the brain and spinal cord to the rest of the body.
 CNS controls body functions like awareness, movement, thinking, and speech. While the spinal cord carries messages and connects to the brainstem through peripheral nerves.
     </p>
+    <img src="https://cdn.kastatic.org/ka-perseus-images/f7fa1bdddc896c2c635a1929c6578b745a6030c2.png" width="400px" height="507px">
 <hr>
 <h1 style="font-size: 25px;">Epilepsy</h1>
 <p style="font-size: 20px;"> Epilepsy is a chronic brain disorder involving recurring seizures, affecting people of all genders, races, ethnic backgrounds, and ages.
@@ -92,6 +93,7 @@ CNS controls body functions like awareness, movement, thinking, and speech. Whil
                 <li>Failure to take prescribed anticonvulsant medications.</li>
             </ul>
             </p>
+    <img src="https://i.imgur.com/2vYGfmq.png">
             <hr>
             <h1 style="font-size: 25px;">How and when do epilepsy seizures start?</h1>
             <p style="font-size: 20px;"> Some seizures start in response to particular situations as if the seizure is a "reflex."
